fix comments in notes overflowing upon hovering

--- a/css/80_app.css
+++ b/css/80_app.css
@@ -3958,10 +3958,10 @@ li.issue-fix-item button:not(.actionable) .fix-icon {
     border: 1px solid #ccc;
 }
 
-/* no scrollbars */
+/* scrollbars only when necessary*/
 .inspector-hover div {
     overflow-x: visible;
-    overflow-y: visible;
+    overflow-y: auto;
 }
 
 /* hide and remove from layout */
@@ -5493,7 +5493,6 @@ li.hide + li.version .badge .tooltip .popover-arrow {
     height: 20px;
     overflow: visible;
     width: 10px;
-    background: #fff;
     border-left: 1px solid #DDD;
 }
 
